[metadata]
name        = ContainerCryptoUtils
description = Utilities to mount/unmount encrypted container files.
version     = file: VERSION.txt
author      = Felix Schwarz
author_email = felix.schwarz@oss.schwarz.eu
license     = MIT
home-page   = https://github.com/FelixSchwarz/container-crypto-utils
platforms   = Linux


[options]
python_requires = >= 3.6
install_requires =
    docopt
    importlib_metadata ; python_version <= "3.7"
testing =
    ddt
    PythonicTestcase
scripts =
    scripts/crypted-container-ctl

packages = find:
namespace_packages = schwarz
zip_safe = false
include_package_data = true

[options.extras_require]
testing =
    ddt
    PythonicTestcase

